deploy/resources/generation/resources/generation/resources/generation/resources/generation/sas-bases/overlays/network/istio/components/sas-workflow-engine/resources.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-workflow
spec:
  host: sas-workflow
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /workflow/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-workflow-definition
spec:
  host: sas-workflow-definition
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /workflowDefinition/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-workflow-engine
    sas.com/admin: namespace
  name: sas-workflow
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /workflow
    - uri:
        prefix: /workflow/
    route:
    - destination:
        host: sas-workflow
    timeout: 300s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-workflow-engine
    sas.com/admin: namespace
  name: sas-workflow-definition
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /workflowDefinition
    - uri:
        prefix: /workflowDefinition/
    route:
    - destination:
        host: sas-workflow-definition
    timeout: 300s
